Open in $EDITOR for text files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 # boxion = {path="../boxion/"}
 boxion = {git = "https://github.com/Schmiddiii/boxion" }
 termion = "*"
+mime = "*"
