--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# boxion = {path="../boxion/"}
-boxion = {git = "https://github.com/Schmiddiii/boxion" }
+boxion = {path="../boxion/"}
+# boxion = {git = "https://github.com/Schmiddiii/boxion" }
 termion = "*"
 mime = "*"
