--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "rust-fm"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-boxion = {path="../boxion/"}
-# boxion = {git = "https://github.com/Schmiddiii/boxion" }
+# boxion = {path="../boxion/"}
+boxion = {git = "https://github.com/Schmiddiii/boxion" }
 termion = "*"
 mime = "*"
